# kryptokrona-kotlin-sdk

./: .clang-format  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  binding.gyp  build-java.sh  build.gradle  build.gradle.kts  detekt-config.yml  detekt.yml  docker-compose.yml  gradle.properties  lombok.config  model.gradle  renovate.json  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  design_considerations.md  feature-request.yml  feature_request.md
.github/workflows/: codeql.yml  detekt.yml  main-ci.yml  master-ci.yml  pr-ci.yml  publish.yml  release.yml
.run/: Main.run.xml  Test.run.xml  build.run.xml  test.run.xml
config/: detekt.yml
crypto/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  chacha.c  crypto-ops.c  crypto.c  crypto.h  hash-ops.h  jni_crypto-ops.c  jni_crypto-ops.h  jni_crypto.c  jni_crypto.h  jni_hash.c  jni_hash.h  jni_keccak.c  jni_keccak.h  keccak.c  random.c  random.h  skein_port.h  slow-hash.c  tree-hash.c  types.h  util.h
crypto/ed25519/: Makefile  jni_ed25519.c  jni_ed25519.h
crypto/include/: CryptoTypes.h  StringTools.h  Varint.h  chacha8.h  crypto.h  groestl.h  groestl_tables.h  hash-ops.h  hash.h  initializer.h  int-util.h  multisig.h  oaes_config.h  oaes_lib.h  random.h  skein.h  skein_port.h  slow-hash-common.h  turtlecoin-crypto.h  variant2_int_sqrt.h
crypto/src/: StringTools.cpp  aesb.c  blake256.c  chacha8.cpp  crypto.cpp  groestl.c  hash-extra-blake.c  hash-extra-groestl.c  hash-extra-jh.c  hash-extra-skein.c  hash.c  jh.c  keccak.c  kryptokrona-crypto-js.cpp  kryptokrona-crypto-node.cpp  kryptokrona-crypto.cpp  lib.rs  main.rs  multisig.cpp  oaes_lib.c  random.cpp  skein.c  slow-hash-arm.c  slow-hash-portable.c  slow-hash-x86.c  tree-hash.c  turtlecoin-crypto-js.cpp  turtlecoin-crypto-node.cpp  turtlecoin-crypto.cpp
crypto/src/platform/msc/: alloca.h  stdbool.h
crypto/src/platform/msc/sys/: param.h
crypto/tests/: cryptotest.cpp
diagram/class/: class_general_diagram.drawio
diagram/state/: s01_overview_diagram.drawio  s02_daemon_diagram.drawio  state_wallet_create.drawio  ~$s02_daemon_diagram.drawio.dtmp
docs/: CNAME  _config.yml  index.html  index.md  release_1.0.0_notes.md  release_1.0.1_notes.md
docs/0.1.0/: allclasses-index.html  allpackages-index.html  constant-values.html  help-doc.html  index-all.html  index.html  member-search-index.js  navigation.html  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  type-search-index.js
docs/0.1.0/kryptokrona-core/: index.html  navigation.html
docs/0.1.0/kryptokrona-core/org.kryptokrona.sdk.core.config/: index.html
docs/0.1.0/kryptokrona-crypto/: index.html
docs/0.1.0/kryptokrona-http/: index.html  navigation.html
docs/0.1.0/kryptokrona-util/: index.html  navigation.html
docs/0.1.0/scripts/: pages.json  sourceset_dependencies.js
docs/0.1.1/: index.html  navigation.html
docs/0.1.1/kryptokrona-core/: index.html
docs/0.1.1/kryptokrona-http/: index.html
docs/0.1.1/kryptokrona-util/: index.html  navigation.html
docs/0.1.1/playground/: index.html  navigation.html
docs/0.1.1/scripts/: pages.json  sourceset_dependencies.js
docs/0.2.0/: index.html  navigation.html
docs/0.2.0/kryptokrona-core/: index.html  navigation.html
docs/0.2.0/kryptokrona-crypto/: index.html
docs/0.2.0/kryptokrona-http/: index.html  navigation.html
docs/0.2.0/kryptokrona-node/: index.html  navigation.html
docs/0.2.0/kryptokrona-service/: index.html
docs/0.2.0/kryptokrona-util/: index.html  navigation.html
docs/0.2.0/kryptokrona-wallet/: navigation.html
docs/0.2.0/kryptokrona-walletapi/: index.html
docs/0.2.0/scripts/: pages.json  sourceset_dependencies.js
docs/0.3.0/: index.html  navigation.html
docs/0.3.0/kryptokrona-node/: index.html
docs/0.3.0/kryptokrona-service/: index.html  navigation.html
docs/0.3.0/kryptokrona-util/: index.html
docs/0.3.0/kryptokrona-wallet/: index.html
docs/0.3.0/kryptokrona-walletapi/: index.html
docs/0.3.0/scripts/: pages.json
docs/1.0.0/: allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-frame.html  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  type-search-index.js
docs/assets/css/: style.css
docs/scripts/: pages.json  sourceset_dependencies.js
docs/styles/: style.css
examples/: .gitignore  README.md
examples/quick-start/: build.gradle  settings.gradle
gradle/static-code-analysis/checkstyle/: checkstyle.xml
gradle/static-code-analysis/pmd/: ruleset.xml
gradle/static-code-analysis/spotbugs/: spotbugs-exclude.xml
kryptokrona-core/: build.gradle.kts  gradle.properties  settings.gradle.kts
kryptokrona-crypto/: build.gradle.kts  settings.gradle.kts
kryptokrona-http/: build.gradle.kts  gradle.properties  settings.gradle.kts
kryptokrona-huginapi/: build.gradle.kts  settings.gradle.kts
kryptokrona-node/: build.gradle.kts  gradle.properties  settings.gradle.kts
kryptokrona-service/: build.gradle.kts  gradle.properties  settings.gradle.kts
kryptokrona-util/: build.gradle.kts  gradle.properties  settings.gradle.kts
kryptokrona-wallet/: build.gradle.kts  settings.gradle.kts
kryptokrona-walletapi/: build.gradle.kts  settings.gradle.kts
playground/: build.gradle.kts  gradle.properties  settings.gradle.kts
resources/: logo.psd  logo_github.psd  website_logo.psd
scripts/: README.md  docker-compose.yml  get_signature_of_libraries.sh
src/main/resources/: application.properties  wordlist.json
src/testapp/c/: testapp.c
website/: README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
website/src/: app.css  app.html
website/src/components/: Footer.svelte  InfoBox.svelte
website/src/routes/: +layout.svelte  +page.md  +page.svelte
website/static/: manifest.json
(+5013 files in other folders)
